Porcentagem do plano de cada paciente sendo aplicada com sucesso

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,12 @@ spring.datasource.username=root
 spring.datasource.password=senha12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+plano.bronze=0.05
+plano.ouro=0.1
+plano.prata=0.15
+plano.vip=0.2
+
+
+
+
