--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/hospital
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/hospital
+spring.datasource.username=postgres
 spring.datasource.password=senha12345
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 plano.bronze=0.05
