feat : connection com o gmail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,15 @@ plano.ouro=0.1
 plano.prata=0.15
 plano.vip=0.2
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=camposdlucasoli@gmail.com
+spring.mail.password=kwqjsnlelyhchkzp
 
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 
+support.mail=camposdlucasoli@gmail.com
 
+spring.profiles.active=dev
