--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,4 @@ spring.mail.properties.mail.smtp.starttls.required=true
 support.mail=camposdlucasoli@gmail.com
 
 spring.profiles.active=dev
+spring.main.allow-bean-definition-overriding=true
